
java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

test {
  useJUnitPlatform()

  jvmArgs(['--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'])
}

dependencies {
  implementation project(":purejson-lib")
  testImplementation 'com.google.testing.compile:compile-testing:0.19'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
  testImplementation 'org.junit.platform:junit-platform-runner:1.8.0'
  testImplementation 'com.github.tonivade:purecheck:0.2'
  testImplementation 'com.github.tonivade:purefun-monad:3.0'
  testImplementation 'com.github.tonivade:purefun-instances:3.0'
  testImplementation 'com.google.code.gson:gson:2.8.6'
}